tests/script_errors/lexer_bad_float/error.txt
Error: 
    1 | 1.0e
      | ^ An invalid float literal